<resources>
    <string name="app_name">AdvancedApp</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>
    <string name="setelan">Kick Me</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="clear_expenses">Clear Expenses</string>
    <string name="clear_income">Clear Income</string>
    <string name="sync_now">SYNC NOW</string>
    <string name="total_expenses">TOTAL EXPENSES =</string>
    <string name="total_income">TOTAL INCOME =</string>
    <string name="btn_income">ADD INCOME</string>
    <string name="btn_expenses">ADD EXPENSES</string>
    <string name="rupiah">Rp.</string>
    <string name="overview_incomes">OVERVIEW INCOMES</string>
    <string name="overview_expenses">OVERVIEW EXPENSES</string>
    <string name="nav_name">Hello, M.Dwi Kuntobayu</string>
    <string name="nav_email">android.studio@android.com</string>
    <string name="cancel_sync">Cancel</string>
    <string name="skip_sync">Skip</string>


    <string name="temp_email">dwikunto.bayu@kiranatama.com</string>
    <string name="temp_password">DKJ3288nd</string>
    <string name="action_register">Register</string>
    <string name="prompt_email">Input Ure Email</string>
    <string name="prompt_password">Enter Ure Password</string>
    <string name="action_sign_in">Sign in</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="login_page">Login First</string>
    <string name="nav_status">www.geeksfarm.com</string>
    <string name="token_id">TOKEN VALUES HERE</string>


    <string-array name="autocomplete_email">
        <item>7@7.com</item>
        <item>soeltz7fold@gmail.com</item>
        <item>mdwibayukunto@kiaratama.com</item>
        <item>dwikunto.bayu@kiranatama.com</item>
        <item>kelvinjames@yahoo.com</item>
        <item>henrysweart@gmail.com</item>
        <item>gracepowell@yahoo.com</item>
    </string-array>
</resources>
