<FrameLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context="x7a.droid.advancedapp.DashboardPage"
    android:id="@+id/fragment_dashboard_page">

<LinearLayout
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/black">

    <android.support.v7.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="280dp"
            android:padding="@dimen/activity_horizontal_margin"
            android:layout_marginTop="@dimen/activity_horizontal_margin"
            android:layout_marginLeft="@dimen/cardview_compat_inset_shadow"
            android:layout_marginRight="@dimen/cardview_compat_inset_shadow"
            android:layout_marginBottom="@dimen/activity_horizontal_margin"
            android:id="@+id/cv_overview_expenses"
            android:layout_gravity="center"
            app:cardCornerRadius="10dp"
            app:cardBackgroundColor="@color/lime"
            app:cardElevation="15dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="5dp"
                    android:text="@string/overview_expenses"
                    android:textAlignment="center"
                    android:id="@+id/tv_expenses_title"
                    android:textStyle="bold"/>

                <!--<ListView-->
                    <!--android:layout_width="wrap_content"-->
                    <!--android:layout_height="180dp"-->
                    <!--android:id="@+id/list_exp" />-->

                <View
                    android:layout_width="match_parent"
                    android:layout_height="2dp"
                    android:layout_gravity="center"
                    android:background="@color/black"/>

                <ListView
                    android:layout_width="match_parent"
                    android:layout_height="210dp"
                    android:id="@+id/lv_expenses">

                </ListView>

                <View
                    android:layout_width="match_parent"
                    android:layout_height="2dp"
                    android:layout_gravity="center"
                    android:background="@color/black"/>

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textAlignment="center"
                    android:text="@string/total_expenses"
                    android:id="@+id/tv_total_expenses"/>
            </LinearLayout>
        </android.support.v7.widget.CardView>

        <android.support.v7.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="280dp"
            android:padding="@dimen/activity_horizontal_margin"
            android:layout_marginLeft="@dimen/cardview_compat_inset_shadow"
            android:layout_marginRight="@dimen/cardview_compat_inset_shadow"
            android:layout_marginBottom="@dimen/activity_horizontal_margin"
            android:id="@+id/cv_overview_income"
            android:layout_gravity="center"
            app:cardCornerRadius="10dp"
            app:cardBackgroundColor="@color/amber">
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="5dp"
                    android:text="@string/overview_incomes"
                    android:textAlignment="center"
                    android:id="@+id/tv_income_title"
                    android:textStyle="bold"/>

                <View
                    android:layout_width="match_parent"
                    android:layout_height="2dp"
                    android:layout_gravity="center"
                    android:background="@color/black"/>
                <ListView
                    android:layout_width="match_parent"
                    android:layout_height="210dp"
                    android:id="@+id/lv_incomes" />
                <View
                    android:layout_width="match_parent"
                    android:layout_height="2dp"
                    android:layout_gravity="center"
                    android:background="@color/black"/>
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textAlignment="center"
                    android:text="@string/total_income"
                    android:id="@+id/tv_total_income"/>
            </LinearLayout>
        </android.support.v7.widget.CardView>

    <android.support.v7.widget.CardView
        android:id="@+id/cv_balance"
        android:layout_width="match_parent"
        android:layout_height="80dp"
        android:padding="@dimen/activity_horizontal_margin"
        android:layout_marginLeft="@dimen/cardview_compat_inset_shadow"
        android:layout_marginRight="@dimen/cardview_compat_inset_shadow"
        android:layout_marginTop="@dimen/cardview_compat_inset_shadow"
        android:layout_marginBottom="@dimen/activity_horizontal_margin"
        app:cardCornerRadius="10dp"
        app:cardBackgroundColor="@color/purple">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:layout_gravity="center"
        android:text="RESULT TOTAL BALANCE"
        android:id="@+id/title_balance"
        android:textAlignment="center"
        android:textAllCaps="true"
        android:textStyle="bold"
        android:textColor="@color/cardview_light_background"/>
        <View
            android:layout_width="match_parent"
            android:layout_height="2dp"
            android:layout_gravity="center"
            android:background="@color/black"/>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/activity_horizontal_margin"
            android:textAllCaps="true"
            android:textAlignment="center"
            android:text="TOTAL BALANCE"
            android:id="@+id/tv_balance"/>
        </LinearLayout>
    </android.support.v7.widget.CardView>
</LinearLayout>
    </FrameLayout>